@@ -75,6 +75,7 @@ admin.caption.usergroup.userfidield=A felhaszn\u00E1l\u00F3i azonos\u00EDt\u00F3
 admin.caption.usergroup.username=Felhaszn\u00E1l\u00F3n\u00E9v
 admin.caption.useversioning=V\u00E1ltozatok haszn\u00E1lata
 admin.caption.virtualwiki=Virtu\u00E1lis Wiki
+admin.message.changesnotsaved=Changes HAVE NOT been saved
 admin.message.changessaved=V\u00E1ltoz\u00E1sok elmentve
 admin.message.indexrefreshed=Index friss\u00EDtve
 admin.message.loginrequired=Csak adminisztr\u00E1torok f\u00E9rhetnek hozz\u00E1 az oldalhoz.
@@ -147,7 +148,10 @@ edit.warning.oldversion=Figyelem\: Jelenleg a sz\u00F3cikk egy r\u00E9gebbi v\u0
 edit.warning.preview=El\u0151n\u00E9zet\: A v\u00E1ltoz\u00E1sok nincsenek elmentve
 error.caption=Rendszerhiba t\u00F6rt\u00E9nt.  A hiba\u00FCzenet\:
 error.databaseconnection=Nem siker\u00FClt csatlakozni az adatb\u00E1zishoz; ellen\u0151r\u00EDzd \u00FAjra a be\u00E1ll\u00EDt\u00E1sokat.
+error.directorydelete=Error while deleting file from {0}: {1}
 error.directoryinvalid={0} nem megfelel\u0151 k\u00F6nyvt\u00E1r.
+error.directoryread=Error while reading file from {0}: {1}
+error.directorywrite=Error while writing file to {0}: {1}
 error.heading=Rendszerhiba t\u00F6rt\u00E9nt.  A hiba\u00FCzenet\:
 error.login=A felhaszn\u00E1l\u00F3n\u00E9v \u00E9s/vagy a jelsz\u00F3 nem megfelel\u0151.  Pr\u00F3b\u00E1ld \u00FAjra.
 error.loginempty=A bejelentkez\u00E9s nem lehet \u00FCres.
