@@ -76,6 +76,7 @@ admin.caption.usergroup.userfidield=Navn p\u00e5 felt for bruker-id
 admin.caption.usergroup.username=Brukernavn
 admin.caption.useversioning=Bruk versjonering
 admin.caption.virtualwiki=Virtuell Wiki
+admin.message.changesnotsaved=Changes HAVE NOT been saved
 admin.message.changessaved=Endringer lagret
 admin.message.indexrefreshed=Indeks oppdatert
 admin.message.loginrequired=Only administrators may access this page.
@@ -148,7 +149,10 @@ edit.warning.oldversion=Warning: The version being edited is an out-of-date vers
 edit.warning.preview=Preview: changes have not been saved
 error.caption=A system error has occurred.  The error message is:
 error.databaseconnection=A connection could not be established with the database; please re-check the settings.
+error.directorydelete=Error while deleting file from {0}: {1}
 error.directoryinvalid={0} is not a valid directory.
+error.directoryread=Error while reading file from {0}: {1}
+error.directorywrite=Error while writing file to {0}: {1}
 error.heading=A system error has occurred.  The error message is:
 error.login=The username and/or password is incorrect.  Please try again.
 error.loginempty=Login cannot be empty.
