@@ -76,6 +76,7 @@ admin.caption.usergroup.username=\u7528\u6236\u540d
 admin.caption.usepreview=\u4f7f\u7528\u9810\u89bd
 admin.caption.useversioning=\u4f7f\u7528\u4fee\u8a02\u7248\u672c
 admin.caption.virtualwiki=\u865b\u64ec Wiki
+admin.message.changesnotsaved=Changes HAVE NOT been saved
 admin.message.changessaved=\u4fdd\u5b58\u4fee\u6539
 admin.message.indexrefreshed=\u7d22\u5f15\u66f4\u65b0
 admin.message.loginrequired=\u53ea\u6709\u7ba1\u7406\u54e1\u624d\u53ef\u4ee5\u8a2a\u554f\u8a72\u9801\u9762\u3002
@@ -148,7 +149,10 @@ edit.warning.oldversion=\u8b66\u544a\uff1a\u73fe\u5728\u904b\u884c\u7684\u662f\u
 edit.warning.preview=\u9810\u89bd\uff1a\u4fee\u6539\u90e8\u5206\u4e26\u6c92\u6709\u4fdd\u5b58
 error.caption=\u7522\u751f\u4e86\u4e00\u500b\u7cfb\u7d71\u932f\u8aa4\uff0c\u932f\u8aa4\u6d88\u606f\u662f\uff1a
 error.databaseconnection=\u4e0d\u80fd\u540c\u6578\u64da\u5eab\u5efa\u7acb\u9023\u63a5\uff0c\u8acb\u91cd\u65b0\u6aa2\u67e5\u8a2d\u7f6e\u3002
+error.directorydelete=Error while deleting file from {0}: {1}
 error.directoryinvalid={0} \u662f\u7121\u6548\u7684\u8def\u5f91\u3002
+error.directoryread=Error while reading file from {0}: {1}
+error.directorywrite=Error while writing file to {0}: {1}
 error.heading=\u7522\u751f\u4e86\u4e00\u500b\u7cfb\u7d71\u932f\u8aa4\uff0c\u932f\u8aa4\u6d88\u606f\u662f\uff1a
 error.login=\u7528\u6236\u540d\u6216\u5bc6\u78bc\u932f\u8aa4\uff0c\u8acb\u91cd\u65b0\u8f38\u5165\u3002
 error.loginempty=\u767b\u9304\u540d\u4e0d\u80fd\u70ba\u7a7a\u3002
