@@ -13,6 +13,8 @@
   [[Topic|Text]].
 * FEATURE: Clean up the layout of the Special:Admin page.
 * FEATURE: Sort property values alphabetically.
+* FEATURE: Add validation checks to Special:Admin.
+* FEATURE: Add additional validation checks to Special:Setup.
 * FEATURE: Remove beta warning from the Special:Translation tool.
 * FEATURE: Updated Hungarian translations from bDaneE.
 * FEATURE: Updated Chinese translations from ewen0930.
